Fix alignment preview class name

--- a/public/CETEI.css
+++ b/public/CETEI.css
@@ -6,6 +6,6 @@
   background-color: blue;
 }
 
-.previewAligmentTEI {
+.previewAlignmentTEI {
   background-color: yellow !important;
 }
